# BibleTopics

./: .gitignore  README.md  mkdocs.yml  pyproject.toml
data/: ReadMe.md
data/Logos/: PreachingThemes.md
data/OpenBible.info/: topic-scores.txt  toptopics.tsv  toptopictopversedata.tsv
data/llm/jsonl/: topicdict.jsonl  topics.jsonl  topicsummary.jsonl  topicversetext.jsonl
docs/: index.md
notebooks/: OpenBibleInfo.ipynb
src/: __init__.py  atlas.py  reader.py  topic.py  verse.py  versesummary.py  versetext.py  writer.py
src/openbibleinfo/: __init__.py  reader.py
