[tool.poetry]
name = "Bible Topics"
version = "0.0.1"
description = "Wrangling data for a dataset of Bible Topics."
authors = ["Sean Boisen <sean.boisen@biblica.com>"]
repository = "https://github.com/sboisen/BibleTopics"
readme = "README.md"
packages = [
  {include = "src"}
]

[tool.poetry.dependencies]
# some unknown issue with 3.11 and 3.12: 2024-01-31 sboisen
Python = ">=3.10,<3.12"
biblelib = ">=0.3"
jupyterlab = "^3.6.3"
csvkit = "^1.1.1"
unicodecsv = "^0.14.1"
nltk = "^3.8.1"
mkdocstrings = {extras = ["python"], version = "^0.24.1"}
clearlib = "^0.1.3"
# spacy = "^3.7.4"
pandas = "^2.2.2"
thefuzz = "^0.22.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
mypy = "^0.981"
pre-commit = "^2.20.0"
tox = "^3.25.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^8.5.10"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target-version = ['py37']
preview = true

[tool.isort]
profile = "black"

[tool.mypy]
files = ["src"]
disallow_untyped_defs = "True"
disallow_any_unimported = "True"
no_implicit_optional = "True"
check_untyped_defs = "True"
warn_return_any = "True"
warn_unused_ignores = "True"
show_error_codes = "True"

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["src"]

